--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
+    
+    // https://mvnrepository.com/artifact/com.linkedin.azkaban/azkaban
+	compile group: 'com.linkedin.azkaban', name: 'azkaban', version: '2.5.0'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
